--- a/index.html
+++ b/index.html
@@ -2,8 +2,78 @@
 <html>
   <head>
     <title>Secret Agent Supply</title>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <link rel="stylesheet" href=".\resources\css\reset.css" type="text/css">
+    <link rel="stylesheet" href=".\resources\css\index.css" type="text/css">
   </head>
   <body>
+
+    <!-- Header -->
+
+<header>
+
+  <div class="topHead">
+    <img src=".\resources\images\logo.png" alt="logo">
+    <h5>Secret Agent Supply Inc.</h5>
+  </div>
+
+  <div class="newsFeed">
+    <h5>NEW ARRIVAL</h5>
+    <h3>Sport Bikes and Motorcycles</h3>
+  </div>
+
+  <nav>
+    <ul class="normal">
+      <li><span><a href="#">Eyewear</a></span></li>
+      <li><span><a href="#">Apparel</a></span></li>
+      <li><span><a href="#">Gadgets</a></span></li>
+      <li><span><a href="#">Vehicles</a></span></li>
+      <li><span><a href="#">Classes</a></span></li>
+      <li><span><a href="#">Contact</a></span></li>
+    </ul>
+    <ul class="mobile">
+      <li><span><a href="#">Menu</a></span></li>
+    </ul>
+  </nav>
+
+</header>
+
+<!-- Main Content -->
+
+  <div class="main">
+
+    <div class="container">
+      <img src=".\resources\images\pen.png" alt="pen">
+      <h3>Explding Pen</h3>
+    </div>
+
+    <div class="container" id="goaway2">
+      <img src=".\resources\images\watch.png" alt="watch">
+      <h3>Cellular Watch</h3>
+    </div>
+
+    <div class="container" id="goaway">
+      <img src=".\resources\images\glasses.png" alt="glasses" class="special">
+      <h3>Thermal Glasses</h3>
+    </div>
+
+  </div>
+
+ <div class="main2">
+    <div class="locHours">
+      <h3>Location</h3>
+      <p>-47.346436, 84.32354</p>
+    </div>
+
+    <div class="locHours">
+      <h3>Hours</h3>
+      <p>0800 - 1800</p>
+    </div>
+  </div>
+
+<footer>
+  <h5>Copyright Secret Agent Supply Inc.</h5>
+</footer>
 
   </body>
 </html>
